Closed Bug 1496430 Opened 6 years ago Closed 6 years ago

Crash in gleam::ffi_gl::missing_fn_panic

Categories

(Core :: Graphics: WebRender, defect, P3)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
geckoview62 --- unaffected
firefox-esr60 --- unaffected
firefox62 --- unaffected
firefox63 --- unaffected
firefox64 --- fixed

People

(Reporter: marcia, Assigned: mattwoodrow)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is
report bp-812db816-ffd8-4aae-9e54-438430181004.
=============================================================

Seen while looking at nightly crash data: https://bit.ly/2OArLk5. Windows 10 crash which started in 20181004100222.

Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=5675805eb31d158cefbc249603fefda457a89ad4&tochange=f87eeba88f1cf3f4d41095f7a58cb518a59f844c

There was a WR update in that changeset: Bug 1495228

Top 10 frames of crashing thread:

0 xul.dll static void std::panicking::rust_panic_with_hook src/libstd/panicking.rs:485
1 xul.dll static <NoType> std::panicking::begin_panic<str*> src/libstd/panicking.rs:409
2 xul.dll static <NoType> gleam::ffi_gl::missing_fn_panic toolkit/library/x86_64-pc-windows-msvc/release/build/gleam-65461470bc9115ba/out/gl_bindings.rs:1076
3 xul.dll bool webrender_bindings::bindings::wr_window_new gfx/webrender_bindings/src/bindings.rs:954
4 xul.dll mozilla::wr::NewRenderer::Run gfx/webrender_bindings/WebRenderAPI.cpp:74
5 xul.dll void mozilla::wr::RenderThread::RunEvent gfx/webrender_bindings/RenderThread.cpp:340
6 xul.dll nsresult mozilla::detail::RunnableMethodImpl<mozilla::wr::RenderThread*, void  xpcom/threads/nsThreadUtils.h:1242
7 xul.dll bool MessageLoop::DeferOrRunPendingTask ipc/chromium/src/base/message_loop.cc:459
8 xul.dll MessageLoop::DoWork ipc/chromium/src/base/message_loop.cc:534
9 xul.dll base::MessagePumpDefault::Run ipc/chromium/src/base/message_pump_default.cc:38

=============================================================
From gfxCriticalLog: Failed ANGLE GL context creation for WebRender
bp-812db816-ffd8-4aae-9e54-438430181004
> MOZ_CRASH Reason 	gl function was not loaded
> GraphicsCriticalError 	|[G0][GFX1-]: Failed ANGLE GL context creation for WebRender: 0000000000000000 (t=3.14212) |[G1][GFX1-]: Failed ANGLE GL context creation for WebRender: 0000000000000000 (t=7.12355) |[G2][GFX1-]: Failed ANGLE GL context creation for WebRender: 0000000000000000 (t=7.12355) 

mozregression --good 20181003223518 --bad 20181004100222
> https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=317b91c1fbd51e48238d05bb3e90663245e751f3&tochange=f87eeba88f1cf3f4d41095f7a58cb518a59f844c

Or could it be caused by this?
> Dan Glastonbury — Bug 1494763 - Use a single shared GLContext in RenderThread when we support it. r=sotaro
Keywords: regression
Assignee: nobody → matt.woodrow
MozReview-Commit-ID: 7ncgoJOpZs9
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5d2059dd4120
Check GL context for RenderCompositorANGLE. r=sotaro
https://hg.mozilla.org/mozilla-central/rev/5d2059dd4120
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: