Bug 1496430 - Check GL context for RenderCompositorANGLE. r=sotaro

MozReview-Commit-ID: 7ncgoJOpZs9

Differential Revision: https://phabricator.services.mozilla.com/D7804